--- a/config/fpm.service
+++ b/config/fpm.service
@@ -3,7 +3,7 @@ Description=The PHP PHP_VERSION FastCGI Process Manager
 After=network.target
 
 [Service]
-Type=simple
+Type=notify
 ExecStart=/usr/bin/php-fpm --nodaemonize --fpm-config /usr/local/php/PHP_VERSION/etc/php-fpm.conf
 ExecStartPost=-/usr/local/php/PHP_VERSION/bin/php-fpm-socket-helper install /run/php/php-fpm.sock /usr/local/php/PHP_VERSION/etc/php-fpm.d/www.conf NO_DOT
 ExecStopPost=-/usr/local/php/PHP_VERSION/bin/php-fpm-socket-helper remove /run/php/php-fpm.sock /usr/local/php/PHP_VERSION/etc/php-fpm.d/www.conf NO_DOT
