--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04]
-        php: [8.0, 8.1]
+        php: ['8.0', '8.1']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
