--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,8 +80,6 @@ jobs:
     strategy:
       matrix: ${{fromJson(needs.get-matrix.outputs.matrix)}}
     steps:
-      - name: Install sudo and curl
-        run: apt-get update && apt-get install curl sudo -y
       - name: Checkout
         uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -89,7 +87,7 @@ jobs:
           path: /tmp
       - name: Install PHP
         run: |
-          mv /tmp/*/*.zst /tmp && ls /tmp
+          mv /tmp/*/*.zst /tmp
           sed -i '/download/d' scripts/install.sh
           bash scripts/install.sh ${{ matrix.php-version }}
       - name: Test
@@ -103,11 +101,9 @@ jobs:
           sudo rm -rf /var/www/html/index.html
           echo "<?php echo current(explode('-', php_sapi_name())).':'.strtolower(current(explode('/', \$_SERVER['SERVER_SOFTWARE']))).\"\n\";" | sudo tee /var/www/html/index.php >/dev/null
           for sapi in apache2handler:apache fpm:apache cgi:apache fpm:nginx; do
-            echo "::group::Test $sapi"
-            switch_sapi $sapi >/dev/null 2>&1
-            curl -s http://localhost
-            [ "$(curl -s http://localhost)" != "$sapi" ] && exit 1
-            echo "::endgroup::"
+            switch_sapi $sapi
+            resp="$(curl -s http://localhost)"
+            [ "$sapi" != "$resp" ] && exit 1 || echo "$resp"
           done
   github-test:
     needs: [build]
@@ -139,11 +135,9 @@ jobs:
           sudo rm -rf /var/www/html/index.html
           echo "<?php echo current(explode('-', php_sapi_name())).':'.strtolower(current(explode('/', \$_SERVER['SERVER_SOFTWARE']))).\"\n\";" | sudo tee /var/www/html/index.php >/dev/null
           for sapi in apache2handler:apache fpm:apache cgi:apache fpm:nginx; do
-            echo "::group::Test $sapi"
-            switch_sapi $sapi >/dev/null 2>&1
-            curl -s http://localhost
-            [ "$(curl -s http://localhost)" != "$sapi" ] && exit 1
-            echo "::endgroup::"
+            switch_sapi $sapi
+            resp="$(curl -s http://localhost)"
+            [ "$sapi" != "$resp" ] && exit 1 || echo "$resp"
           done
   release:
     needs: [local-test, github-test]
