--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'skip-local-test')"
     container: ${{ matrix.container }}
     strategy:
+      fail-fast: false
       matrix: ${{fromJson(needs.get-matrix.outputs.matrix)}}
     steps:
       - name: Checkout
@@ -110,6 +111,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     if: "!contains(github.event.head_commit.message, 'skip-github-test')"
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04]
         php: ['8.0', '8.1']
