--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ on:
         description: 'Build mode: --build-all or --build--new'
         default: '--build-new'
         required: false
+      php-source:
+        description: 'PHP source: --web-php or --php-src'
+        default: '--web-php'
+        required: false
   schedule:
     - cron: '0 0 * * *'
 
@@ -38,6 +42,7 @@ jobs:
           CONTAINER_OS_LIST: ${{ env.CONTAINER_OS_LIST }}
           RUNNER_OS_LIST: ${{ env.RUNNER_OS_LIST }}
           PHP_LIST: ${{ env.PHP_LIST }}
+          PHP_SOURCE: ${{ github.event.inputs.php-source }}
           SAPI_LIST: ${{ env.SAPI_LIST }}
         run: bash scripts/get-matrix.sh
 
@@ -61,9 +66,10 @@ jobs:
         run: bash scripts/build.sh build_sapi ${{ matrix.sapi }}
         env:
           SAPI_LIST: ${{ env.SAPI_LIST }}
-          GITHUB_MESSAGE: ${{ github.event.head_commit.message }}
+          GITHUB_MESSAGE: ${{ github.event.head_commit.message || github.event.inputs.build-mode }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           PHP_VERSION: ${{ matrix.php-version }}
+          PHP_SOURCE: ${{ github.event.inputs.php-source }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
@@ -105,12 +111,13 @@ jobs:
         env:
           SAPI_LIST: ${{ env.SAPI_LIST }}
           GITHUB_USER: ${{ github.repository_owner }}
-          GITHUB_MESSAGE: ${{ github.event.head_commit.message }}
+          GITHUB_MESSAGE: ${{ github.event.head_commit.message || github.event.inputs.build-mode }}
           GITHUB_NAME: 'Shivam Mathur'
           GITHUB_EMAIL: ${{ secrets.email }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           PHP_VERSION: ${{ matrix.php-version }}
+          PHP_SOURCE: ${{ github.event.inputs.php-source }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
@@ -259,5 +266,6 @@ jobs:
       - name: Release
         run: bash scripts/release.sh
         env:
-          GITHUB_MESSAGE: ${{ github.event.head_commit.message }}
+          GITHUB_MESSAGE: ${{ github.event.head_commit.message || github.event.inputs.build-mode }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PHP_SOURCE: ${{ github.event.inputs.php-source }}
