Update OS Support --build-all
Drop Debian stretch and Ubuntu hirsute

Add Ubuntu 22.04

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ on:
     - cron: '0 0 * * *'
 
 env:
-  CONTAINER_OS_LIST: ubuntu:bionic ubuntu:focal ubuntu:hirsute debian:stretch debian:buster debian:bullseye
+  CONTAINER_OS_LIST: ubuntu:bionic ubuntu:focal ubuntu:jammy debian:buster debian:bullseye
   RUNNER_OS_LIST: ubuntu-18.04 ubuntu-20.04
   PHP_LIST: 8.0 8.1 8.2
   SAPI_LIST: apache2 cgi cli embed fpm phpdbg
