Do not capture the group in FilesMatch regex in configs

--- a/config/php-cgi.conf
+++ b/config/php-cgi.conf
@@ -2,7 +2,7 @@
 # Apache webserver
 
 # application/x-httpd-php                        phtml php
-<FilesMatch ".+\.ph(ar|p|tml)$">
+<FilesMatch ".+\.ph(?:ar|p|tml)$">
     SetHandler application/x-httpd-php
 </FilesMatch>
 # application/x-httpd-php-source                 phps
@@ -14,7 +14,7 @@
     Require all denied
 </FilesMatch>
 # Deny access to files without filename (e.g. '.php')
-<FilesMatch "^\.ph(ar|p|ps|tml)$">
+<FilesMatch "^\.ph(?:ar|p|ps|tml)$">
     Require all denied
 </FilesMatch>
 
