--- a/config/php-fpm.conf
+++ b/config/php-fpm.conf
@@ -6,7 +6,7 @@
     SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
     </IfModule>
 
-    <FilesMatch ".+\.ph(ar|p|tml)$">
+    <FilesMatch ".+\.ph(?:ar|p|tml)$">
         <If "-f %{REQUEST_FILENAME}">
             SetHandler "proxy:unix:/run/php/phpPHP_VERSION-fpm.sock|fcgi://localhost"
         </If>        
@@ -18,7 +18,7 @@
         Require all denied
     </FilesMatch>
     # Deny access to files without filename (e.g. '.php')
-    <FilesMatch "^\.ph(ar|p|ps|tml)$">
+    <FilesMatch "^\.ph(?:ar|p|ps|tml)$">
         Require all denied
     </FilesMatch>
 </IfModule>
