--- a/config/php.conf
+++ b/config/php.conf
@@ -1,4 +1,4 @@
-<FilesMatch ".+\.ph(ar|p|tml)$">
+<FilesMatch ".+\.ph(?:ar|p|tml)$">
     SetHandler application/x-httpd-php
 </FilesMatch>
 <FilesMatch ".+\.phps$">
@@ -9,7 +9,7 @@
     Require all denied
 </FilesMatch>
 # Deny access to files without filename (e.g. '.php')
-<FilesMatch "^\.ph(ar|p|ps|tml)$">
+<FilesMatch "^\.ph(?:ar|p|ps|tml)$">
     Require all denied
 </FilesMatch>
 
