--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ env:
   CONTAINER_OS_LIST: ubuntu:bionic ubuntu:focal ubuntu:jammy debian:buster debian:bullseye
   RUNNER_OS_LIST: ubuntu-18.04 ubuntu-20.04 ubuntu-22.04
   #PHP_LIST: 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3
-  PHP_LIST: 7.4 8.0 8.1 8.2 8.3
+  PHP_LIST: 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3
   SAPI_LIST: apache2 cgi cli embed fpm phpdbg
   BUILD_LIST: nts zts
 
