--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,10 @@ on:
         description: 'PHP source: --web-php or --php-src'
         default: '--web-php'
         required: false
+      php-versions:
+        description: 'PHP version to build'
+        default: '5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3'
+        required: false
   schedule:
     - cron: '0 0 * * *'
 
@@ -44,7 +48,7 @@ jobs:
           CONTAINER_OS_LIST: ${{ env.CONTAINER_OS_LIST }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RUNNER_OS_LIST: ${{ env.RUNNER_OS_LIST }}
-          PHP_LIST: ${{ env.PHP_LIST }}
+          PHP_LIST: ${{ github.event.inputs.php-versions || env.PHP_LIST }}
           PHP_SOURCE: ${{ github.event.inputs.php-source }}
           SAPI_LIST: ${{ env.SAPI_LIST }}
           BUILD_LIST: ${{ env.BUILD_LIST }}
