--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ on:
         default: '5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3'
         required: false
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 1-31/2 * *'
 
 env:
   CONTAINER_OS_LIST: ubuntu:bionic ubuntu:focal ubuntu:jammy debian:buster debian:bullseye
