Use correct libpcre as per the PHP version [skip ci]

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,6 +141,7 @@ jobs:
         run: bash scripts/install-requirements.sh
         env:
           BUILD: ${{ matrix.build }}
+          PHP_VERSION: ${{ matrix.php-version }}
 
       - uses: actions/download-artifact@v3
         with:
