--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,13 @@ on:
         required: false
       container-os-versions:
         description: 'OS versions to build on'
-        default: 'ubuntu:focal ubuntu:jammy debian:buster debian:bullseye debian:bookworm'
+        default: 'ubuntu:20.04 ubuntu:22.04 debian:10 debian:11 debian:12'
         required: false
   schedule:
     - cron: '0 0 1-31/2 * *'
 
 env:
-  CONTAINER_OS_LIST: ubuntu:focal ubuntu:jammy debian:buster debian:bullseye debian:bookworm
+  CONTAINER_OS_LIST: ubuntu:20.04 ubuntu:22.04 ubuntu:24.04 debian:10 debian:11 debian:12
   RUNNER_OS_LIST: ubuntu-20.04 ubuntu-22.04
   PHP_LIST: 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3 8.4
   SAPI_LIST: apache2 cgi cli embed fpm phpdbg
@@ -36,6 +36,7 @@ jobs:
   get-matrix:
     runs-on: ubuntu-latest
     outputs:
+      container_only: ${{ steps.set-matrix.outputs.container_only }}
       container_os_matrix: ${{ steps.set-matrix.outputs.container_os_matrix }}
       runner_os_matrix: ${{ steps.set-matrix.outputs.runner_os_matrix }}
       test_container_os_matrix: ${{ steps.set-matrix.outputs.test_container_os_matrix }}
@@ -254,7 +255,7 @@ jobs:
   github-test:
     needs: [merge, build, get-matrix]
     runs-on: ${{ matrix.os }}
-    if: "!contains(github.event.head_commit.message, 'skip-github-test') && contains(needs.get-matrix.outputs.container_os_matrix, 'ubuntu')"
+    if: "!contains(github.event.head_commit.message, 'skip-github-test') && contains(needs.get-matrix.outputs.container_only, 'false')"
     strategy:
       fail-fast: false
       matrix: ${{fromJson(needs.get-matrix.outputs.test_runner_os_matrix)}}
@@ -292,7 +293,7 @@ jobs:
   release-container-only:
     needs: [get-matrix, local-test]
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'skip-release') && !contains(needs.get-matrix.outputs.container_os_matrix, 'ubuntu')"
+    if: "!contains(github.event.head_commit.message, 'skip-release') && contains(needs.get-matrix.outputs.container_only, 'true')"
 
     steps:
       - name: Checkout
@@ -316,7 +317,7 @@ jobs:
   release:
     needs: [get-matrix, local-test, github-test]
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'skip-release') && contains(needs.get-matrix.outputs.container_os_matrix, 'ubuntu')"
+    if: "!contains(github.event.head_commit.message, 'skip-release') && contains(needs.get-matrix.outputs.container_only, 'false')"
 
     steps:
       - name: Checkout
