--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ on:
         required: false
       container-os-versions:
         description: 'OS versions to build on'
-        default: 'ubuntu:20.04 ubuntu:22.04 debian:10 debian:11 debian:12'
+        default: 'ubuntu:20.04 ubuntu:22.04 ubuntu:24.04 debian:10 debian:11 debian:12'
         required: false
   schedule:
     - cron: '0 0 1-31/2 * *'
