--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ env:
   RUNNER_OS_LIST: ubuntu-22.04 ubuntu-24.04 ubuntu-22.04-arm ubuntu-24.04-arm
   PHP_LIST: 5.6 7.0 7.1 7.2 7.3 7.4 8.0 8.1 8.2 8.3 8.4 8.5 8.6
   SAPI_LIST: apache2 cgi cli embed fpm phpdbg
-  BUILD_LIST: nts zts
+  BUILD_LIST: nts zts asan asan-zts
   PHP_SOURCE: --web-php
   CONTAINER_BASE: ubuntu-24.04
   CONTAINER_BASE_ARM: ubuntu-24.04-arm
